tests/snapshots/blockflow/main_chain_block_by_ghost_uncle/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - main-chain-block-by-ghost-uncle
    - foo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: path parameter ghost_uncle_hash (Invalid hex string: foo: foo)
