tests/snapshots/blockflow/main_chain_block_by_ghost_uncle/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - main-chain-block-by-ghost-uncle
    - bdaf9dc514ce7d34b6474b8ca10a3dfb93ba997cb9d5ff1ea724ebe2af48abe5
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: The block bdaf9dc514ce7d34b6474b8ca10a3dfb93ba997cb9d5ff1ea724ebe2af48abe5 does not exist, please check if your full node synced
